Fixing desktop header spacing

--- a/interview_db_vue/css/custom.scss
+++ b/interview_db_vue/css/custom.scss
@@ -140,7 +140,7 @@ h6 {
     font-size: 50px;
   }
 
-  .husky-header{
+  .title-logo{
     justify-content: space-between;
   }
 }
